--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -16,19 +16,23 @@
                 </header>
                 <form id="product-form" class="card card-body">
                     <div class="form-group">
-                        <input id="nombre" type="text" class="form-control my-2" name="name" placeholder="Product's name" autofocus>
+                        <input id="nombre" type="text" class="form-control my-2" name="nombre" placeholder="Product's name" autofocus>
                     </div>
                     <div class="form-group">
-                        <input id="precio" type="number" step="any" class="form-control my-2" name="price" placeholder="Product's price">
+                        <input id="precio" type="number" step="any" class="form-control my-2" name="precio" placeholder="Product's price">
                     </div>
                     <div class="form-group">
-                        <textarea name="description" id="descripcion" rows="3" class="form-control my-2" placeholder="Product's description"></textarea>
+                        <textarea name="descripcion" id="descripcion" rows="3" class="form-control my-2" placeholder="Product's description"></textarea>
                     </div>
                     <button id="btn-guardar" name="btn-save" class="btn btn-primary btn-block">Save</button>
                 </form>
             </div>
             <div class="col-md-6 my-3 p-4">
-                <div id="area-products"></div>
+                <div id="area-products">
+                    <ul>
+                        
+                    </ul>
+                </div>
             </div>
         </div>
     </main>
