--- a/src/frontend/index.html
+++ b/src/frontend/index.html
@@ -6,6 +6,7 @@
     <title>Electron</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
 </head>
 <body class="bg-light">
     
@@ -16,6 +17,7 @@
                     <h2 class="lead">Crear producto</h2>
                 </header>
                 <form id="product-form" class="card card-body">
+                    <input type="hidden" id="id">
                     <div class="form-group">
                         <input id="nombre" type="text" class="form-control my-2" name="nombre" placeholder="Product's name" autofocus required>
                     </div>
